# git-wt

./: .gitignore  PRD.md  README.md  pyproject.toml
src/git_wt/: __init__.py  cli.py  config.py  git.py  hooks.py  worktree.py
