[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-wt"
version = "0.1.6"
description = "A lightweight CLI tool for managing git worktrees"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Yuxiang Wu", email = "yuxiang.cs@gmail.com" },
]
keywords = ["git", "worktree", "cli", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "rich",
    "questionary",
]

[project.urls]
Homepage = "https://github.com/yuxiang-wu/git-wt"
Repository = "https://github.com/yuxiang-wu/git-wt"
Issues = "https://github.com/yuxiang-wu/git-wt/issues"

[project.scripts]
git-wt = "git_wt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/git_wt"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]
